Added Draft publish option and Blog Delete option.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 
+
+
 {% block content %}
+    <!-- <h2>{{test}}</h2> -->
     {% for post in posts %}
         <div class="post">
             <div class="date">
