--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,9 +10,10 @@
     <body>
             <div class="page-header">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_new' %}" class="top-menu"title="Add a new Blog"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu" title="List Drafts/Unpublished"><span class="glyphicon glyphicon-edit"></span></a>
                 {% endif %}
-                <h1><a href="/">Django Girls Blog</a></h1>
+                <h1><a href="/" title="Show all published Blogs">Django Girls Blog</a></h1>
             </div>
             <div class="content container">
                 <div class="row">
