--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,9 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'post_new' %}" class="top-menu"title="Add a new Blog"><span class="glyphicon glyphicon-plus"></span></a>
                     <a href="{% url 'post_draft_list' %}" class="top-menu" title="List Drafts/Unpublished"><span class="glyphicon glyphicon-edit"></span></a>
+                    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                {% else %}
+                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>             
                 {% endif %}
                 <h1><a href="/" title="Show all published Blogs">Django Girls Blog</a></h1>
             </div>
