--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -21,5 +21,6 @@
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+    <a href="{% url 'signup' %}" class="btn btn-info">Register</a> 
 {% endblock %}
 
